--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
 <div class="wrapper">
   <nav class="page-header">
-    <section class="title"><h1 id="f">F</h1><h1 id="v">V</h1></section>
+    <section class="title"><h1 id="f">Family</h1><h1 id="v">Photo</h1><h1 id="p">Album</h1></section>
     <span class="green-span"></span>
     <ul>
       {% if g.user %}
